--- a/src/CreativeMinds.KVKData.RestAPI/CreativeMinds.KVKData.RestAPI.csproj
+++ b/src/CreativeMinds.KVKData.RestAPI/CreativeMinds.KVKData.RestAPI.csproj
@@ -1,27 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<AssemblyVersion>0.5.0.0</AssemblyVersion>
-		<FileVersion>0.5.0.0</FileVersion>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>0.5.0</Version>
+		<Version>1.0.0.0</Version>
 		<Authors>Steen F. Tøttrup</Authors>
 		<Company>CreativeMinds Aps</Company>
 		<Description>Searching the public Dutch company database</Description>
 		<Copyright>Copyright 2023 (C) CreativeMinds Aps. All rights reserved.</Copyright>
 		<PackageLicenseUrl>https://www.creativeminds.dk/license</PackageLicenseUrl>
-		<PackageProjectUrl>https://bitbucket.org/steentottrup/skolevisioner.common.dapper</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/CreativeMindsDK/creativeminds-common-appmodels</RepositoryUrl>
-		<RepositoryType>Git</RepositoryType>
+		<PackageProjectUrl>https://github.com/CreativeMindsDK/kvkdata</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/CreativeMindsDK/kvkdata</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
 
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-	  <PackageReference Include="microsoft.extensions.options.configurationextensions" Version="6.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
+	  <PackageReference Include="microsoft.extensions.options.configurationextensions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
